@@ -365,6 +365,10 @@ Agent.prototype.setGlobalLabel = function (key, value) {
   } else {
     this._conf.globalLabels.push([key, value])
   }
+  if (!this._apmClient) {
+    this.logger.warn('cannot setGlobalLabel on inactive or unconfigured agent')
+    return
+  }
   this._apmClient.config({
     globalLabels: this._conf.globalLabels.reduce((acc, [k, v]) => {
       acc[k] = v
